Update time settings and alert logic: morning phase 16:00-16:05, alert uses realtime_count, 1-minute delay before alert

--- a/env.example
+++ b/env.example
@@ -110,3 +110,9 @@ DB_PATH=people_counter.db
 SAVE_SNAPSHOTS=true
 SNAPSHOT_DIR=snapshots
 
+# Production Scheduler Configuration
+PRODUCTION__RESET_TIME=00:00
+PRODUCTION__MORNING_START=16:00
+PRODUCTION__MORNING_END=16:05
+PRODUCTION__ALERT_INTERVAL_MIN=1
+
