--- a/env.example
+++ b/env.example
@@ -104,7 +104,15 @@ LOGGING__LEVEL=INFO
 LOGGING__FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 
 # Database
-DB_PATH=people_counter.db
+DB_PATH=data/people_counter.db
+
+# PostgreSQL Configuration (optional - for production event storage)
+# Set these environment variables to enable PostgreSQL storage
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=people_counter
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123456
 
 # Snapshots
 SAVE_SNAPSHOTS=true
@@ -112,7 +120,7 @@ SNAPSHOT_DIR=snapshots
 
 # Production Scheduler Configuration
 PRODUCTION__RESET_TIME=00:00
-PRODUCTION__MORNING_START=16:36
-PRODUCTION__MORNING_END=16:40
+PRODUCTION__MORNING_START=16:27
+PRODUCTION__MORNING_END=16:33
 PRODUCTION__ALERT_INTERVAL_MIN=1
 
