--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,7 @@ APScheduler>=3.10.0
 # Notifications
 requests>=2.31.0
 
-# Database (SQLite is built-in, but we use it explicitly)
+# Database
+psycopg2-binary>=2.9.0
+# SQLite is built-in
 
